--- a/css/nathers-2016.styles.css
+++ b/css/nathers-2016.styles.css
@@ -164,38 +164,67 @@ body {
     margin: 0; }
 
 /* line 130, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+.form-submit {
+  background-color: #4080b0;
+  border-radius: 3px;
+  border: 0;
+  color: white;
+  display: inline-block;
+  font-size: inherit;
+  font-weight: bold;
+  padding: 7px 18px;
+  text-decoration: none;
+  background-clip: padding-box; }
+  /* line 354, /Applications/CodeKit.app/Contents/Resources/engines/bourbon/_bourbon-deprecated-upcoming.scss */
+  .form-submit:hover:not(:disabled) {
+    background-color: #478ec3;
+    cursor: pointer; }
+  /* line 365, /Applications/CodeKit.app/Contents/Resources/engines/bourbon/_bourbon-deprecated-upcoming.scss */
+  .form-submit:active:not(:disabled), .form-submit:focus:not(:disabled) {
+    background-color: #3d7299;
+    cursor: pointer; }
+  /* line 59, /Applications/CodeKit.app/Contents/Resources/engines/bourbon/_bourbon-deprecated-upcoming.scss */
+  .form-submit:disabled {
+    cursor: not-allowed;
+    opacity: 0.5; }
+
+/* line 134, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+.inline-label + p {
+  display: inline; }
+
+/* line 137, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
 .l-page .l-main a, .l-header .top-link a, .l-footer a {
   -webkit-transition: all 0.1s ease-in;
   -moz-transition: all 0.1s ease-in;
   transition: all 0.1s ease-in; }
-  /* line 132, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 139, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page .l-main a:link, .l-header .top-link a:link, .l-footer a:link, .l-page .l-main a:visited, .l-header .top-link a:visited, .l-footer a:visited {
     padding-bottom: 0.0625rem;
     font-family: "montserrat regular", arial, helvetica, sans-serif;
     border-bottom: 1px dotted #dedede;
     color: #4080b0;
     text-decoration: none; }
-  /* line 140, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 147, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page .l-main a:hover, .l-header .top-link a:hover, .l-footer a:hover {
     color: #005696;
     border-bottom: 1px solid #4080b0; }
-  /* line 144, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 151, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page .l-main a:active, .l-header .top-link a:active, .l-footer a:active {
     color: #c84d54;
     border-bottom-color: #da888d; }
-  /* line 148, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 155, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page .l-main a[href$=".pdf"], .l-header .top-link a[href$=".pdf"], .l-footer a[href$=".pdf"] {
     background: url("../images/icon-pdf.png") no-repeat left center;
     padding-left: 1.5rem; }
-  /* line 152, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 159, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page .l-main a[href$=".docx"], .l-header .top-link a[href$=".docx"], .l-footer a[href$=".docx"], .l-page .l-main a[href$=".doc"], .l-header .top-link a[href$=".doc"], .l-footer a[href$=".doc"] {
     background: url("../images/icon-doc.png") no-repeat left center;
     padding-left: 1.5rem; }
-  /* line 157, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 164, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page .l-main a span.ext, .l-header .top-link a span.ext, .l-footer a span.ext {
     background: url("../images/icon-externallink.png") no-repeat center; }
 
-/* line 162, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+/* line 169, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
 figure figcaption,
 figure.image figcaption {
   font-size: 0.8rem;
@@ -601,8 +630,25 @@ table {
     -ms-flex: 4;
     flex: 4; } }
 
-/* line 3, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
-.search {
+/* line 2, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
+.search-form {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem; }
+  /* line 4, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
+  .search-form fieldset {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem; }
+    /* line 6, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
+    .search-form fieldset label {
+      display: inline !important; }
+  /* line 10, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
+  .search-form .form-submit {
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0; }
+
+/* line 14, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
+.search,
+.search-form {
   -webkit-box-flex: 1;
   -moz-box-flex: 1;
   box-flex: 1;
@@ -610,8 +656,9 @@ table {
   -moz-flex: 1;
   -ms-flex: 1;
   flex: 1; }
-  /* line 6, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
-  .search .container-inline {
+  /* line 17, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
+  .search .container-inline,
+  .search-form .container-inline {
     display: -webkit-box;
     display: -moz-box;
     display: box;
@@ -619,8 +666,9 @@ table {
     display: -moz-flex;
     display: -ms-flexbox;
     display: flex; }
-  /* line 9, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
-  .search .form-type-searchfield {
+  /* line 20, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
+  .search .form-type-searchfield,
+  .search-form .form-type-searchfield {
     -webkit-box-flex: 1;
     -moz-box-flex: 1;
     box-flex: 1;
@@ -629,8 +677,9 @@ table {
     -ms-flex: 1;
     flex: 1;
     margin: 0; }
-    /* line 12, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
-    .search .form-type-searchfield .form-search {
+    /* line 23, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
+    .search .form-type-searchfield .form-search,
+    .search-form .form-type-searchfield .form-search {
       font-size: 1rem;
       line-height: 1.5rem;
       border-bottom-left-radius: 0.125rem;
@@ -650,23 +699,28 @@ table {
       vertical-align: middle;
       width: 100%; }
       /* line 4, /Applications/CodeKit.app/Contents/Resources/engines/bourbon/css3/_placeholder.scss */
-      .search .form-type-searchfield .form-search::-webkit-input-placeholder {
+      .search .form-type-searchfield .form-search::-webkit-input-placeholder,
+      .search-form .form-type-searchfield .form-search::-webkit-input-placeholder {
         color: #7f7f7f;
         font-family: "montserrat light", arial, helvetica, sans-serif; }
       /* line 4, /Applications/CodeKit.app/Contents/Resources/engines/bourbon/css3/_placeholder.scss */
-      .search .form-type-searchfield .form-search::-moz-placeholder {
+      .search .form-type-searchfield .form-search::-moz-placeholder,
+      .search-form .form-type-searchfield .form-search::-moz-placeholder {
         color: #7f7f7f;
         font-family: "montserrat light", arial, helvetica, sans-serif; }
       /* line 4, /Applications/CodeKit.app/Contents/Resources/engines/bourbon/css3/_placeholder.scss */
-      .search .form-type-searchfield .form-search:-moz-placeholder {
+      .search .form-type-searchfield .form-search:-moz-placeholder,
+      .search-form .form-type-searchfield .form-search:-moz-placeholder {
         color: #7f7f7f;
         font-family: "montserrat light", arial, helvetica, sans-serif; }
       /* line 4, /Applications/CodeKit.app/Contents/Resources/engines/bourbon/css3/_placeholder.scss */
-      .search .form-type-searchfield .form-search:-ms-input-placeholder {
+      .search .form-type-searchfield .form-search:-ms-input-placeholder,
+      .search-form .form-type-searchfield .form-search:-ms-input-placeholder {
         color: #7f7f7f;
         font-family: "montserrat light", arial, helvetica, sans-serif; }
-  /* line 30, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
-  .search .form-actions {
+  /* line 41, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
+  .search .form-actions,
+  .search-form .form-actions {
     -webkit-box-flex: 0;
     -moz-box-flex: 0;
     box-flex: 0;
@@ -674,8 +728,9 @@ table {
     -moz-flex: 0;
     -ms-flex: 0;
     flex: 0; }
-    /* line 32, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
-    .search .form-actions .form-submit {
+    /* line 43, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
+    .search .form-actions .form-submit,
+    .search-form .form-actions .form-submit {
       font-size: 1rem;
       line-height: 1.5rem;
       padding: 0.5rem;
@@ -685,36 +740,42 @@ table {
       background-color: #4080b0;
       border-bottom-right-radius: 0.125rem;
       border-top-right-radius: 0.125rem;
+      border-bottom-left-radius: 0;
+      border-top-left-radius: 0;
       font-family: "montserrat light", arial, helvetica, sans-serif;
       border: none;
       color: #ededed;
       cursor: pointer;
       text-align: center;
       text-decoration: none; }
-      /* line 44, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
-      .search .form-actions .form-submit:hover {
+      /* line 56, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
+      .search .form-actions .form-submit:hover,
+      .search-form .form-actions .form-submit:hover {
         color: #000000;
         background-color: #7faaca; }
-      /* line 48, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
-      .search .form-actions .form-submit:active {
+      /* line 60, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
+      .search .form-actions .form-submit:active,
+      .search-form .form-actions .form-submit:active {
         color: #ededed;
         background-color: #da888d; }
-  /* line 54, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
-  .search label {
+  /* line 66, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
+  .search label,
+  .search-form label {
     display: none; }
-  /* line 57, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
-  .search h2 {
+  /* line 69, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
+  .search h2,
+  .search-form h2 {
     display: none; }
 
 @media (min-width: 768px) {
-  /* line 65, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
+  /* line 77, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
   .search {
     width: 100%;
     display: block;
     margin: 0 0 0.5rem; } }
 
 @media (min-width: 1200px) {
-  /* line 73, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
+  /* line 85, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
   .search {
     margin: 0; } }
 
