--- a/sass/components/_search.scss
+++ b/sass/components/_search.scss
@@ -1,8 +1,28 @@
 // Search
+.page-search {
+	.ds-search-extra {
+		@include margin(0 0 $vert-spacing-unit 0);
+	}
+	h2 {
+		display: list-item;
+		list-style-image: url('../images/bullet.png');
+		@include margin(0 0 0 rem(12px));
+		@include padding(0 0 rem(14.4px) 0);
+		@include weight(light);
+		color: color(grey, three-quarter);
+		line-height: rem(25.6px);
+		@include adjust-font-size-to(16px);
+		border: none;
+	}
+	p {
+		@include margin(null null null rem(12px));
+	}
+}
 .search-form {
 	@include margin($vert-spacing-unit null);
 	fieldset {
 		@include margin($vert-spacing-unit null);
+		background: color(grey, sixteenth);
 		label {
 			display: inline !important;
 		}
