--- a/css/nathers-2016.styles.css
+++ b/css/nathers-2016.styles.css
@@ -668,16 +668,16 @@ table {
 
 /* line 6, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
 .page-search h2 {
-  display: list-item;
-  list-style-image: url("../images/bullet.png");
+  font-size: 1rem;
+  line-height: 1.5rem;
   margin: 0 0 0 0.75rem;
   padding: 0 0 0.9rem;
   font-family: "montserrat light", arial, helvetica, sans-serif;
+  border: none;
   color: #404040;
+  display: list-item;
   line-height: 1.6rem;
-  font-size: 1rem;
-  line-height: 1.5rem;
-  border: none; }
+  list-style-image: url("../images/bullet.png"); }
 
 /* line 17, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_search.scss */
 .page-search p {
